# vecedit

./: .clang-format  .gitignore  .rgignore  CMakeLists.txt  Makefile  README.md  TC-mingw.cmake  docs.tex  temat.txt
docs/: .gitignore  class_diagram.puml  docs.aux  docs.out  docs.tex  docs.toc
docs/beamer/: ZTP.tex
src/: Document.cpp  Document.h  main.cpp  util.h
src/commands/: AddFigureCommand.h  AddFiguresCommand.h  ChangeDocumentProperties.h  ChangeFigurePropsCommand.h  ChangeOrderCommand.h  CommandManager.cpp  CommandManager.h  GroupFiguresCommand.h  MovePointCommand.h  RemoveFiguresCommand.h  ToggleVisibilityCommand.h  UngroupFiguresCommand.h
src/figure/: CircleFigure.cpp  CircleFigure.h  Figure.h  FigureBase.h  FigureGroup.cpp  FigureGroup.h  PointEditor.h  PolyFigure.h  RectFigure.cpp  RectFigure.h
src/figure/adapter/: CircleFigurePointEditor.cpp  CircleFigurePointEditor.h  FigureGroupPointEditor.cpp  FigureGroupPointEditor.h  PolyFigurePointEditor.cpp  PolyFigurePointEditor.h  RectFigurePointEditor.cpp  RectFigurePointEditor.h
src/figure/visitor/: BitmapRendererVisitor.h  FigureVisitor.h  PointIntersectionVisitor.cpp  PointIntersectionVisitor.h  RendererVisitor.cpp  RendererVisitor.h  SvgSerializerVisitor.cpp  SvgSerializerVisitor.h
src/ui/: AppUi.cpp  AppUi.h  DocumentPropertiesView.cpp  DocumentPropertiesView.h  DocumentTabs.cpp  DocumentTabs.h  Editor.cpp  Editor.h  FigureHierarchyPanel.cpp  FigureHierarchyPanel.h  FigurePropertiesPanel.cpp  FigurePropertiesPanel.h  IconButton.cpp  IconButton.h  KeyboardShortcut.h  Toolbar.cpp  Toolbar.h  Widget.h
src/ui/command/: AddFiguresCommand.h  ChangeDocumentProperties.h  ChangeFigurePropsCommand.h  ChangeOrderCommand.h  Command.h  CommandManager.cpp  GroupFiguresCommand.h  MovePointCommand.h  NewDocumentCommand.cpp  NewDocumentCommand.h  OpenDocumentCommand.cpp  OpenDocumentCommand.h  RemoveFiguresCommand.h  SetFigureInsertCommand.cpp  SetFigureInsertCommand.h  SetSelectCommand.cpp  SetSelectCommand.h  ToggleVisibilityCommand.h  UngroupFiguresCommand.h
src/ui/strategy/: FunctorStrategy.h  NewDocumentStrategy.cpp  NewDocumentStrategy.h  OpenDocumentStrategy.cpp  OpenDocumentStrategy.h  RedoStrategy.h  SaveDocumentStrategy.cpp  SaveDocumentStrategy.h  SetFigureInsertStrategy.cpp  SetFigureInsertStrategy.h  SetSelectStrategy.cpp  SetSelectStrategy.h  Strategy.h  UndoStrategy.h
